--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "node-sass": "^5.0.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3"
   },
   "scripts": {
@@ -17,6 +19,10 @@
       "react-app",
       "react-app/jest"
     ]
+  },
+  "engines": {
+    "npm": "6.14.10",
+    "node": "14.15.4"
   },
   "browserslist": {
     "production": [
